syntax = "proto3";
package order.v1;

import "google/protobuf/empty.proto";

option go_package = "github.com/quemin2402/order-service/proto;orderpb";

message OrderItem   { string product_id = 1; int32 quantity = 2; }
message Order       { string id = 1; repeated OrderItem items = 2; string status = 3; }

message OrderID     { string id = 1; }
message CreateOrderRequest { Order order = 1; }
message UpdateOrderRequest { Order order = 1; }
message OrderResponse      { Order order = 1; }
message ListOrdersRequest  {}
message ListOrdersResponse { repeated Order orders = 1; }

service OrderService {
  rpc CreateOrder (CreateOrderRequest) returns (OrderResponse);
  rpc GetOrder    (OrderID)            returns (OrderResponse);
  rpc UpdateOrder (UpdateOrderRequest) returns (OrderResponse);
  rpc ListOrders  (ListOrdersRequest)  returns (ListOrdersResponse);
  rpc DeleteOrder (OrderID)            returns (google.protobuf.Empty);
}
